2012-05-31  Peter Jones <pjones@redhat.com>

	* include/grub/i386/linux.h (linux_kernel_params): Add v206.
	* grub-core/loader/i386/linux.c (grub_linux_boot): Use v206.
	(grub_cmd_linux) [__x86_64__]: Validate grub_efi_system_table.

2012-05-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/linux.c (grub_linux_boot): Fix overflow and
	uninited variable. Allocate at least setup_sects.

2012-05-30  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix handling of EFI with big memory maps.

	* grub-core/loader/i386/linux.c (GRUB_LINUX_CL_OFFSET): Removed.
	(real_mode_mem): Likewise.
	(real_mode_target): Likewise.
	(real_mode_pages): Likewise.
	(prot_mode_pages): Likewise.
	(linux_params): New var.
	(linux_cmdline): Likewise.
	(free_pages): Don't set real mode variables.
	(allocate_pages): Don't allocate real mode memory.
	(grub_e820_add_region): Remove the limit.
	(grub_linux_boot): Allocate and copy real mode memory.
	(grub_linux_unload): Free linux_cmdline.
	(grub_cmd_linux): Use temporary storage for parameters.
	(grub_cmd_initrd): Likewise.
	* include/grub/i386/linux.h (GRUB_E820_MAX_ENTRY): Removed.
	(linux_kernel_params): Make it 1K big.

2012-05-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* Makefile.util.def: Remove -Wno-format.
	* grub-core/Makefile.core.def: Likewise.

2012-05-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* tests/cmp_unit_test.c: Add missing failure message.
	* tests/example_unit_test.c: Likewise.
	* tests/printf_unit_test.c: Likewise.

2012-05-30  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/gptsync.c (grub_cmd_gptsync): Propagate the
	relaxation of protective MBR requirements.

2012-05-29  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add condition for COND_HOST_XNU.
	* Makefile.util.def (10_xnu): New script.
	* util/grub.d/10_xnu.in: New file, extracted from 30_os_prober.in.

2012-05-29  Vladimir Serbinenko  <phcoder@gmail.com>
